--- a/crypfolio/web/faces/portfolio.xhtml
+++ b/crypfolio/web/faces/portfolio.xhtml
@@ -10,22 +10,11 @@
 
             <p:outputPanel id="portfolioMainData" style="line-height: 2.5;">
 
+                <!--   MARKET VALUE   -->
                 <h:outputText class="title"
                               value="Market value: "/>
                 <h:outputText style="font-weight: bold;"
                               value="#{portfolioBacking.marketValue} #{portfolioBacking.activeUser.user.portfolio.showedCurrency}"/>
-
-                <h:outputText class="title"
-                              value="Net cost: "/>
-                <h:outputText style="font-weight: bold;"
-                              value="#{portfolioBacking.netCost} #{portfolioBacking.activeUser.user.portfolio.showedCurrency}"/>
-
-                <h:outputText class="title"
-                              value="Profit: "/>
-                <h:outputText style="font-weight: bold;"
-                              value="#{portfolioBacking.getProfit()} #{portfolioBacking.activeUser.user.portfolio.showedCurrency}
-                               (#{portfolioBacking.getProfitPercentage()}%)"
-                              styleClass="#{portfolioBacking.getProfit() >= 0.0 ? 'green' : 'red'}"/>
 
                 <!--   PORTFOLIO   CURRENCIES   -->
                 <h:form id="porfolio-form" style="display: inline-block; height: 32px;">
@@ -45,6 +34,20 @@
                     </p:selectOneMenu>
 
                 </h:form>
+
+                <!--   NET COST   -->
+                <h:outputText class="title"
+                              value="Net cost: "/>
+                <h:outputText style="font-weight: bold;"
+                              value="#{portfolioBacking.netCost} #{portfolioBacking.activeUser.user.portfolio.showedCurrency}"/>
+
+                <!--   PROFIT   -->
+                <h:outputText class="title"
+                              value="Profit: "/>
+                <h:outputText style="font-weight: bold;"
+                              value="#{portfolioBacking.getProfit()} #{portfolioBacking.activeUser.user.portfolio.showedCurrency}
+                               (#{portfolioBacking.getProfitPercentage()}%)"
+                              styleClass="#{portfolioBacking.getProfit() >= 0.0 ? 'green' : 'red'}"/>
 
             </p:outputPanel>
 
