<p:dataTable value="" ...> is used bean's parameters, with calling a bean's method doesn't work table rows sorting

--- a/crypfolio/web/faces/archive.xhtml
+++ b/crypfolio/web/faces/archive.xhtml
@@ -7,7 +7,7 @@
     <p:outputPanel id="archivePanel">
 
         <!-- The archive items table -->
-        <p:dataTable value="#{portfolioBacking.activeUser.user.portfolio.getItemsArchived()}"
+        <p:dataTable value="#{portfolioBacking.archivedItems}"
                      var="itemEntity" styleClass="panelGridCenter"
                      stickyHeader="true"
                      id="archiveDataTableWV" widgetVar="archiveDataTableWV">
