--- a/crypfolio/web/faces/portfolio.xhtml
+++ b/crypfolio/web/faces/portfolio.xhtml
@@ -68,7 +68,7 @@
         <h:outputText styleClass="span-10px-height"/>
 
         <!-- The main items table -->
-        <p:dataTable value="#{portfolioBacking.activeUser.user.portfolio.getItemsNotArchived()}"
+        <p:dataTable value="#{portfolioBacking.notArchivedItems}"
                      var="itemEntity" styleClass="panelGridCenter"
                      stickyHeader="true"
                      id="portfolioDataTableWV" widgetVar="portfolioDataTableWV">
