--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -66,8 +66,8 @@
                 <!--now is using new type of values showing as number and f:convertNumber used-->
                 <p:outputPanel id="watchCoinPrice">
                     <h:outputText
-                            value="#{watchlistBacking.getWatchCoinPrice(
-                    userWatchCoinEntity.coinId.id, userWatchCoinEntity.showedCurrency)}">
+                            value="#{watchlistBacking.roundingForView(watchlistBacking.getWatchCoinPrice(
+                    userWatchCoinEntity.coinId.id, userWatchCoinEntity.showedCurrency), userWatchCoinEntity.showedCurrency)}">
                         <f:convertNumber type="number" pattern="###,###.########" locale="en_US"/>
                     </h:outputText>
 
