--- a/crypfolio/web/faces/account-menu.xhtml
+++ b/crypfolio/web/faces/account-menu.xhtml
@@ -11,8 +11,8 @@
             <i class="fas fa-user-circle menu-account-img blue"></i>
 
             <p:menuButton value="#{userBacking.user.email}" iconPos="right">
-                <p:menuitem value="Settings" actionListener="#{logoutBacking.logout}" icon="menubutton1"/>
-                <p:menuitem value="Friends" actionListener="#{logoutBacking.logout}" icon="menubutton2"/>
+                <p:menuitem value="Settings" actionListener="#" icon="menubutton1"/>
+                <p:menuitem value="Friends" actionListener="#" icon="menubutton2"/>
                 <p:menuitem value="Logout" action="#{logoutBacking.logout}" icon="menubutton3"/>
             </p:menuButton>
 
