--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -173,10 +173,10 @@
     </p:outputPanel>
 
     <!--            =====================               modal window ADD WATCH COIN -->
-    <div id="divWatchAddCoin" tabindex="-1">
+    <div id="divWatchAddCoin">
         <p:dialog header="Add coin to Watchlist" id="dlgWatchAddCoin" widgetVar="dlgWatchAddCoin" modal="true"
                   resizable="false" draggable="false" position="center top" closeOnEscape="true"
-                  showEffect="bounce" hideEffect="fade" class="modal-window">
+                  hideEffect="fade" class="modal-window">
 
             <h:form id="formWatchAddCoin">
 
