portfolioDataTableRowUnselect(); added to unselect a row after it was added

--- a/crypfolio/web/faces/portfolio-add-item.xhtml
+++ b/crypfolio/web/faces/portfolio-add-item.xhtml
@@ -310,7 +310,7 @@
                                                          actionListener="#{transactionsBacking.doSubmitAddTransaction}"
                                                          update="mainTabView:portfolioMainData mainTabView:portfolioDataTableForm
                                                                     mainTabView:archiveDataTableWV growl"
-                                                         oncomplete="PF('dlgPortfolioAddItem').hide();"
+                                                         oncomplete="PF('dlgPortfolioAddItem').hide(); portfolioDataTableRowUnselect();"
                                                          value="Done"
                                                          icon="ui-icon-check"
                                                          styleClass="ui-state-disabled"
